# bar-code-reader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: constants.py  decode_bar.py  linha_digitavel.py  main.py  main_window.py  other_window.py  pydecode.py
src/bar_code_reader/: constants.py  decode_bar.py  main.py  main_window.py  other_window.py
tests/: comparador_codigos.py
